--- a/index.html
+++ b/index.html
@@ -29,7 +29,30 @@
             <h1>WoofMeet</h1>
             <h2>Helping find a home for every pet <br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>(that needs one)</em> since 2004.</h2>
-            <center><p>For almost two decades, PetRescue has helped in creating true social change by bringing pet adoption into the mainstream. Our work has helped make a difference to the Australian rescue community and thousands of pets in need of rescue and rehabilitation. But, until every pet is safe, respected, and loved, we all still have big, hairy work to do. Find out more about our mission to help save 100,000 healthy and rehomable pets each year.</p></center>
+            <center><p>For almost two decades, WoofMeet has helped in creating true social change by bringing pet adoption into the mainstream. Our work has helped make a difference to the Indian rescue community and thousands of pets in need of rescue and rehabilitation. But, until every pet is safe, respected, and loved, we all still have big, hairy work to do. Find out more about our mission to help save 100,000 healthy and rehomable pets each year.</p></center>
+            <button>Find Out More</button>
+            <h3>19 years of impact</h3>
+            <em>We've fetched some numbers for you....</em>
+        </div>
+    </div>
+    <img src="homepage_impact_bg_hills-9672a358aa9bda2720446f5f8b5868f2f7e6ae822a6e81c7175f2844e7e7e521.svg" alt="" id="hillimg">
+    <div id="counters">
+        <div class="counter">
+            <span class="num"  data-count="853843">0</span>
+            <span class="text">Total pets adopted</span>
+        </div>
+        <i class="fas fa-dog" id="dog"></i>
+        <div class="counter">
+            <span class="num"  data-count="492377">0</span>
+            <span class="text">In food donations</span>
+        </div>
+        <i class="fas fa-paw" id="paw"></i>
+        <i class="fas fa-dove" id="dove"></i> 
+        <div class="counter">
+            <span class="num"  data-count="587">0</span>
+            <span class="text">Cities Reached</span>  
+            <i class="fas fa-cat" id="cat"></i>   
+                
         </div>
     </div>
 
